[gd_scene load_steps=17 format=3 uid="uid://bg3kf6nthm41k"]

[ext_resource type="Script" uid="uid://doqdavwhcxinc" path="res://scripts/room52.gd" id="1_1hm3t"]
[ext_resource type="Texture2D" uid="uid://cr7yj50he3yqf" path="res://images/5_inactivated.png" id="2_ex7pw"]
[ext_resource type="Texture2D" uid="uid://blep7knj4hbth" path="res://images/vraag52.png" id="5_rysxi"]
[ext_resource type="PackedScene" uid="uid://d1awp8vrnet6x" path="res://scenes/hint.tscn" id="6_fo6w4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fo6w4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j1fqe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dy6rw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yrp0j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dhsca"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rysxi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s54pp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ds3x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uodtl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xl1xu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwrhy"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_ex7pw"]
Panel/styles/panel = SubResource("StyleBoxFlat_qwrhy")

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1hm3t")

[node name="5Inactivated" type="Sprite2D" parent="."]
position = Vector2(576.30255, 324.25)
scale = Vector2(0.28763637, 0.24547851)
texture = ExtResource("2_ex7pw")

[node name="ShowHint" type="Button" parent="."]
layout_mode = 0
offset_left = 932.0
offset_top = 184.0
offset_right = 1107.0
offset_bottom = 305.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_fo6w4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j1fqe")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dy6rw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yrp0j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dhsca")

[node name="ShowInstuctions" type="Button" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 52.0
offset_right = 658.0
offset_bottom = 130.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_rysxi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_s54pp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8ds3x")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_uodtl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xl1xu")

[node name="antwoord52" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 363.0
offset_top = 498.0
offset_right = 722.0
offset_bottom = 547.0

[node name="TimerLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Hint" parent="." instance=ExtResource("6_fo6w4")]
visible = false

[node name="Instructions" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 1050.0
offset_bottom = 612.0
size_flags_vertical = 4
theme = SubResource("Theme_ex7pw")

[node name="informatie52" type="Sprite2D" parent="Instructions"]
position = Vector2(576, 321.99997)
scale = Vector2(1.20251, 1.19593)
texture = ExtResource("5_rysxi")

[node name="HideInstructions" type="Button" parent="Instructions" groups=["Buttons"]]
layout_mode = 0
offset_left = 1050.0
offset_top = 17.0
offset_right = 1137.0
offset_bottom = 92.0

[connection signal="pressed" from="ShowHint" to="Hint" method="_on_show_hint_pressed"]
[connection signal="pressed" from="ShowInstuctions" to="." method="_on_show_instuctions_pressed"]
[connection signal="pressed" from="ShowInstuctions" to="." method="_on_showinformatie_52_pressed"]
[connection signal="text_submitted" from="antwoord52" to="." method="_on_antwoord_52_text_submitted"]
[connection signal="pressed" from="Instructions/HideInstructions" to="." method="_on_hide_instructions_pressed"]
